src/objects/JBCXM__ApplicationSettings__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AccessKeys__c</fullName>
        <label>AccessKeys</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__AccountMapField__c</fullName>
        <description>This field is used in API to get the account Id for storing in objects &quot;SurveyResponse&quot;, &quot;User Adoption&quot; etc</description>
        <inlineHelpText>Account Mapping Field is used to map to the account record that is being referred to in JBara API calls.</inlineHelpText>
        <label>AccountMapField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdoptionAggregationColumns__c</fullName>
        <description>It specifies the Adoption Aggregation column type. For example Sum, Avg, Count of same column or other.</description>
        <label>Adoption Aggregation Columns</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdoptionAggregationType__c</fullName>
        <description>It Specifies the Aggregation type, For example By User, By Account, By Instance, By Instance and User.</description>
        <label>Adoption Aggregation Type</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdoptionGranularity__c</fullName>
        <defaultValue>&quot;MONTHLY&quot;</defaultValue>
        <label>Adoption Granularity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AdoptionMeasureColMap__c</fullName>
        <description>It stores the map between the adoption measure and column.</description>
        <label>Adoption Measure Column Map</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__AlertAssociated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want to associate Alerts to another object other than Account.</inlineHelpText>
        <label>Alert Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__ApplicationLabels__c</fullName>
        <label>Application Labels</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__BOPChurnAmounts__c</fullName>
        <label>BOP Churn Amounts</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTA_Association_Metadata__c</fullName>
        <description>Stores CTA association metadata</description>
        <label>CTA Association Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CalculateASVByTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to calculate the ASV using term if term is less than 12.</description>
        <label>Calculate ASV By Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CaseAccountField__c</fullName>
        <label>CaseAccountField</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__CaseObjectName__c</fullName>
        <label>CaseObjectName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ChurnByBOP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Calculate churn based on BOP</inlineHelpText>
        <label>Churn By BOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CockpitConfig__c</fullName>
        <label>Cockpit Configuration</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DataAnamoliesSchedulerInfo__c</fullName>
        <label>Data Anamolies Scheduler Info</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DefaultTemplate__c</fullName>
        <label>Default Template</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisableCustUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to toggle the customer info update based on the CRUD operations on Transactions.</description>
        <label>Delink customers and transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DownsellInChurn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to consider downsell in churn dashboard.</inlineHelpText>
        <label>Downsell In Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GainsightVersion__c</fullName>
        <description>This will be used to record Gainsight version being deployed onto the org.</description>
        <label>Gainsight app version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsCaseEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show cases from case object.</description>
        <label>IsCaseEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsLRMEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLRMEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsNSAdoptionEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNSAdoptionEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsNSEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNSEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsNSExportEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNSExportEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsNSReportsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNSReportsEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__LicensedUserNotInAdoptionGraph__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to not show license user in adoption graph</description>
        <label>LicensedUser Not In Adoption Graph</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__LicensedUserNotInAdoptionGrid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to not show license user in adoption grid</description>
        <label>LicensedUser Not In Adoption Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MigrationStatus__c</fullName>
        <label>Migration Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__MilestoneAssociated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is is used to link milestone with object other than account</description>
        <label>MilestoneAssociated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSAssociatedObjectDisplayName__c</fullName>
        <description>What is the Display field name that should be used in Reports. For eg: (&apos;Opportunity Name&apos; if The name within the Opportunity object is associated with NPS)</description>
        <inlineHelpText>What is the Display field name that should be used in Reports. For eg: (&apos;Opportunity Name&apos; if The name within the Opportunity object is associated with NPS)</inlineHelpText>
        <label>NPS Associated Object Display Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSAssociatedObjectDisplay__c</fullName>
        <description>This will be used to get display label while showing nps responses</description>
        <inlineHelpText>Select the Display Field that should be used in all the reports after Associating NPS with an Object.</inlineHelpText>
        <label>NPS Associated Object Display</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSAssociatedObjectKey__c</fullName>
        <description>This will be used to record key column based on which need to associated object id</description>
        <inlineHelpText>This is usually not entered from the UI. This is the Record ID of the object that is associated to this NPS Response.</inlineHelpText>
        <label>NPS Associated Object Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSAssociatedObject__c</fullName>
        <description>This will store related object name against which survey response need to be added</description>
        <inlineHelpText>Select the object that will be Associated with NPS Response.</inlineHelpText>
        <label>NPSAssociated Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__NPSAssociated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to show label from associated object while showing NPS</description>
        <inlineHelpText>Check if you want to associate NPS to another object other than Account.</inlineHelpText>
        <label>NPS Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__NSChecksConfig__c</fullName>
        <label>NS Checks Config</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__NSColumnMap__c</fullName>
        <description>This is used to maintain column mapping between usage measure and ns measure</description>
        <label>NS Column Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__NSDrillDownConfig__c</fullName>
        <label>NS Drilldown Configuartion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__NSURL__c</fullName>
        <label>NS URL</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpportunityCloseDate__c</fullName>
        <description>This is used for Opportunity validation.</description>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpportunityRulesFields__c</fullName>
        <label>Opportunity Rules Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpportunityStageName__c</fullName>
        <description>This is used for validate the Opportunity stage name.</description>
        <label>Opportunity Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__OrgTimeZone__c</fullName>
        <defaultValue>&quot;America/Los_Angeles&quot;</defaultValue>
        <description>Org level time zone</description>
        <label>Organization Time Zone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__PageSize__c</fullName>
        <description>To hold the page sizes of grids across the app.</description>
        <label>PageSize</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipConfig__c</fullName>
        <label>RelationshipConfig</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalBasedChurn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To show churn calculation based on the renewal information or not.</description>
        <label>Show Renewal based churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalDownsellInChurn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to consider renewal with downsell in churn.</inlineHelpText>
        <label>Renewal Downsell In Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevenueBand__c</fullName>
        <defaultValue>&apos;[]&apos;</defaultValue>
        <description>This is used to store the list of Revenue Band configuration details. For example the config string look like the bellow String.
&apos;[{&quot;Name&quot;:&quot;Brand1&quot;, &quot;Min&quot;:0, &quot;Max&quot;:1000},{&quot;Name&quot;:&quot;Brand1&quot;, &quot;Min&quot;:1001, &quot;Max&quot;:3000}]&apos;.</description>
        <label>Revenue Band Config</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SFTaskAssociated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFTask Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Stats__c</fullName>
        <label>Statistics</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskFields__c</fullName>
        <label>Task Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Task_Association_Metadata__c</fullName>
        <label>Task Association Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__TransactionAssociated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want to associate Transactions to another object other than Account.</inlineHelpText>
        <label>Transaction Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__UsageSchedulerInfo__c</fullName>
        <label>Usage Aggregation Scheduler Info</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__UsageUtilizationCalc__c</fullName>
        <label>UsageUtilizationCalc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__UsesEndDateAsWeekName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to identify the week label based on the start day or end day of week</description>
        <label>Uses week end date as name of week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__WeekStartsOn__c</fullName>
        <description>This will stores the start day of  week. (This field should contains only week days)</description>
        <label>Week Starts On</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__WigetConfig__c</fullName>
        <label>WigetConfig</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Settings</label>
    <nameField>
        <label>Application Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>